5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4187/executions/1834_1278.log
== TEST (2019-06-26 21:59:37) 
-- CODE:
from numpy import *
from numpy.linalg import *

distancia_city = array([
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]])

cityA = int(input("digite cidade A:"))
cityB = int(input("digite cidade B:"))

distancia = 0
while(cityB != -1):
	cityA = (cityA % 10) - 1
	cityB = (cityB % 10) - 1

	distancia = distancia + distancia_city[cityA,cityB]
	cityB = int(input("digite cidade B:"))
print(distancia)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 22:00:36) 
-- CODE:
from numpy import *
from numpy.linalg import *

distancia_city = array([
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]])

cityA = int(input("digite cidade A:"))
cityB = int(input("digite cidade B:"))

distancia = 0
while(cityB != -1):
	cityA = (cityA % 10) - 1
	cityB = (cityB % 10) - 1

	distancia = distancia + distancia_city[cityA,cityB]
	cityB = int(input("digite cidade B:"))
print(distancia)
-- EXECUTION TIME:
0.996284
-- TEST CASE 1:
---- input:
333
555
666
111
-1

---- correct output:
24
---- user output:
10
-- TEST CASE 2:
---- input:
222
777
555
333
666
111
-1

---- correct output:
50
---- user output:

-- TEST CASE 3:
---- input:
111
222
111
333
111
555
111
777
-1

---- correct output:
57
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 22:00:59) 
-- CODE:
from numpy import *
from numpy.linalg import *

distancia_city = array([
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]])

cityA = int(input("digite cidade A:"))
cityB = int(input("digite cidade B:"))

distancia = 0
while(cityB != -1):
	cityA = (cityA % 10) - 1
	cityB = (cityB % 10) - 1

	distancia = distancia + distancia_city[cityA,cityB]
	cityB = int(input("digite cidade B:"))
print(distancia)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 22:01:30) 
-- CODE:
from numpy import *
from numpy.linalg import *

distancia_city = array([
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]])

cityA = int(input("digite cidade A:"))
cityB = int(input("digite cidade B:"))

distancia = 0
while(cityB != -1):
	cityA = (cityA % 10) - 1
	cityB = (cityB % 10) - 1

	distancia = distancia + distancia_city[cityA,cityB]
	cityB = int(input("digite cidade B:"))
print(distancia)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 22:03:09) 
-- CODE:
from numpy import *
from numpy.linalg import *

distancia_city = array([
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]])

cityA = int(input("digite cidade A:"))
cityB = int(input("digite cidade B:"))

distancia = 0
while(cityB != -1):
	cityA = (cityA % 10) - 1
	cityB = (cityB % 10) - 1

	distancia = distancia + distancia_city[cityA,cityB]
	cityB = int(input("digite cidade B:"))
print(distancia)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 22:04:26) 
-- CODE:
from numpy import *
from numpy.linalg import *

distancia_city = array([
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]])

cityA = int(input("digite cidade A:"))
cityB = int(input("digite cidade B:"))

distancia = 0
while(cityB != -1):
	cityA = (cityA % 10) - 1
	cityB = (cityB % 10) - 1
	print(distancia)
distancia = distancia + distancia_city[cityA,cityB]
	cityB = int(input("digite cidade B:"))
print(distancia)
-- ERROR:
File "XXXX", line 22
    cityB = int(input())
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 22:05:32) 
-- CODE:
from numpy import *
from numpy.linalg import *

distancia_city = array([
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]])

cityA = int(input("digite cidade A:"))
cityB = int(input("digite cidade B:"))

distancia = 0
while(cityB != -1):
	cityA = (cityA % 10) - 1
	cityB = (cityB % 10) - 1
	print(distancia)
	distancia = distancia + distancia_city[cityA,cityB]
	cityB = int(input("digite cidade B:"))
print(distancia)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 22:18:58) 
-- CODE:
from numpy import *
from numpy.linalg import *

distancia_city = array([
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]])

cityA = int(input("digite cidade A:"))
cityB = int(input("digite cidade B:"))
cityA = (cityA % 10) - 1
cityB = (cityB % 10) - 1
distancia = 0
while(cityB != -1):
	cityA = (cityA % 10) - 1
	cityB = (cityB % 10) - 1
	print(distancia)
	distancia = distancia + distancia_city[cityA,cityB]
	cityA = cityB
	cityB = int(input("digite cidade B:"))
print(distancia)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 22:19:16) 
-- CODE:
from numpy import *
from numpy.linalg import *

distancia_city = array([
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]])

cityA = int(input("digite cidade A:"))
cityB = int(input("digite cidade B:"))
cityA = (cityA % 10) - 1
cityB = (cityB % 10) - 1
distancia = 0
while(cityB != -1):
	cityA = (cityA % 10) - 1
	cityB = (cityB % 10) - 1
	print(distancia)
	distancia = distancia + distancia_city[cityA,cityB]
	cityA = cityB
	cityB = int(input("digite cidade B:"))
print(distancia)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 22:19:56) 
-- CODE:
from numpy import *
from numpy.linalg import *

distancia_city = array([
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]])

cityA = int(input("digite cidade A:"))
cityB = int(input("digite cidade B:"))
cityA = (cityA % 10) - 1
cityB = (cityB % 10) - 1
distancia = 0
while(cityB != -1):
	cityA = (cityA % 10) - 1
	cityB = (cityB % 10) - 1
	print(distancia)
	distancia = distancia + distancia_city[cityA,cityB]
	cityB = int(input("digite cidade B:"))
print(distancia)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 22:21:06) 
-- CODE:
from numpy import *
from numpy.linalg import *

distancia_city = array([
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]])

cityA = int(input("digite cidade A:"))
cityB = int(input("digite cidade B:"))

distancia = 0
while(cityB != -1):
	cityA = (cityA % 10) - 1
	cityB = (cityB % 10) - 1
	
	distancia = distancia + distancia_city[cityA,cityB]
	cityB = int(input("digite cidade B:"))
print(distancia)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 22:21:35) 
-- CODE:
from numpy import *
from numpy.linalg import *

distancia_city = array([
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]])

cityA = int(input("digite cidade A:"))
cityB = int(input("digite cidade B:"))

distancia = 0
while(cityB != -1):
	cityA = (cityA % 10) - 1
	cityB = (cityB % 10) - 1
	
	distancia = distancia + distancia_city[cityA,cityB]
	cityB = int(input("digite cidade B:"))
print(distancia)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 22:22:55) 
-- CODE:
from numpy import *
from numpy.linalg import *

distancia_city = array([
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]])

cityA = int(input("digite cidade A:"))
cityB = int(input("digite cidade B:"))

distancia = 0
while(cityB != -1):
	cityA = (cityA % 10) - 1
	cityB = (cityB % 10) - 1
	
	distancia = distancia + distancia_city[cityA,cityB]
	cityB = int(input("digite cidade B:"))
print(distancia)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 22:23:27) 
-- CODE:
from numpy import *
from numpy.linalg import *

distancia_city = array([
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]])

cityA = int(input("digite cidade A:"))
cityB = int(input("digite cidade B:"))

cityA = (cityA % 10) - 1
distancia = 0
while(cityB != -1):
	cityB = (cityB % 10) - 1
	
	distancia = distancia + distancia_city[cityA,cityB]
	cityB = int(input("digite cidade B:"))
print(distancia)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 22:24:01) 
-- CODE:
from numpy import *
from numpy.linalg import *

distancia_city = array([
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]])

cityA = int(input("digite cidade A:"))
cityB = int(input("digite cidade B:"))

cityA = (cityA % 10) - 1
distancia = 0
while(cityB != -1):
	cityB = (cityB % 10) - 1
	
	distancia = distancia + distancia_city[cityA,cityB]
	cityB = int(input("digite cidade B:"))
print(distancia)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 22:24:15) 
-- CODE:
from numpy import *
from numpy.linalg import *

distancia_city = array([
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]])

cityA = int(input("digite cidade A:"))
cityB = int(input("digite cidade B:"))

cityA = (cityA % 10) - 1
distancia = 0
while(cityB != -1):
	cityB = (cityB % 10) - 1
	
	distancia = distancia + distancia_city[cityA,cityB]
	cityB = int(input("digite cidade B:"))
print(distancia)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 22:24:48) 
-- CODE:
from numpy import *
from numpy.linalg import *

distancia_city = array([
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]])

cityA = int(input("digite cidade A:"))
cityB = int(input("digite cidade B:"))

cityA = (cityA % 10) - 1
distancia = 0
while(cityB != -1):
	cityB = (cityB % 10) - 1
	
	distancia = distancia + distancia_city[cityA,cityB]
	cityB = int(input("digite cidade B:"))
print(distancia)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 22:25:12) 
-- CODE:
from numpy import *
from numpy.linalg import *

distancia_city = array([
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]])

cityA = int(input("digite cidade A:"))
cityB = int(input("digite cidade B:"))

cityA = (cityA % 10) - 1
distancia = 0
while(cityB != -1):
	cityB = (cityB % 10) - 1
	
	distancia = distancia + distancia_city[cityA,cityB]
	cityB = int(input("digite cidade B:"))
print(distancia)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 22:25:25) 
-- CODE:
from numpy import *
from numpy.linalg import *

distancia_city = array([
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]])

cityA = int(input("digite cidade A:"))
cityB = int(input("digite cidade B:"))

cityA = (cityA % 10) - 1
distancia = 0
while(cityB != -1):
	cityB = (cityB % 10) - 1
	
	distancia = distancia + distancia_city[cityA,cityB]
	cityB = int(input("digite cidade B:"))
print(distancia)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:19:47) 
-- CODE:
from numpy import *
from numpy.linalg import *

distancia_city = array([
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]])

cityA = int(input("digite cidade A:"))
cityB = int(input("digite cidade B:"))

cityA = (cityA % 10) - 1
cityB = (cityB % 10) - 1
distancia = distancia_city[cityA,cityB]

while(cityB != -1):
	z = cityB
	cityB = int(input("digite cidade B:"))
	cityB = (cityB % 10) - 1
	distancia = distancia + distancia_city[z,cityB]
print(distancia)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:23:12) 
-- CODE:
from numpy import *
from numpy.linalg import *

distancia_city = array([
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]])

cityA = int(input("digite cidade A:"))
cityB = int(input("digite cidade B:"))

cityA = (cityA % 10) - 1
cityB = (cityB % 10) - 1
distancia = distancia_city[cityA,cityB]

while(cityB != -1):
	z = cityB
	cityB = int(input("digite cidade B:"))
	#cityB = (cityB % 10) - 1
	distancia = distancia + distancia_city[z,cityB]
print(distancia)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:23:25) 
-- CODE:
from numpy import *
from numpy.linalg import *

distancia_city = array([
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]])

cityA = int(input("digite cidade A:"))
cityB = int(input("digite cidade B:"))

cityA = (cityA % 10) - 1
cityB = (cityB % 10) - 1
distancia = distancia_city[cityA,cityB]

while(cityB != -1):
	z = cityB
	cityB = int(input("digite cidade B:"))
	#cityB = (cityB % 10) - 1
	distancia = distancia + distancia_city[z,cityB]
print(distancia)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:23:36) 
-- CODE:
from numpy import *
from numpy.linalg import *

distancia_city = array([
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]])

cityA = int(input("digite cidade A:"))
cityB = int(input("digite cidade B:"))

cityA = (cityA % 10) - 1
cityB = (cityB % 10) - 1
distancia = distancia_city[cityA,cityB]

while(cityB != -1):
	z = cityB
	cityB = int(input("digite cidade B:"))
	cityB = (cityB % 10) - 1
	distancia = distancia + distancia_city[z,cityB]
print(distancia)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:24:50) 
-- CODE:
from numpy import *
from numpy.linalg import *

distancia_city = array([
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]])

cityA = int(input("digite cidade A:"))
cityB = int(input("digite cidade B:"))

cityA = (cityA % 10) - 1
cityB = (cityB % 10) - 1
distancia = distancia_city[cityA,cityB]

while(cityB != -1):
	z = cityB
	cityB = int(input("digite cidade B:"))
	cityB = (cityB % 10) - 1
	distancia = distancia + distancia_city[z,cityB]
print(distancia)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:27:34) 
-- CODE:
from numpy import *
from numpy.linalg import *

distancia_city = array([
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]])

cityA = int(input("digite cidade A:"))
cityB = int(input("digite cidade B:"))

cityA = (cityA % 10) - 1
cityB = (cityB % 10) - 1
distancia = distancia_city[cityA,cityB]

while(cityB != -1):
	z = cityB
	cityB = int(input("digite cidade B:"))
	cityB = (cityB % 10) - 1
	distancia = distancia + distancia_city[(z-1),cityB]
print(distancia)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:31:33) 
-- CODE:
from numpy import *
from numpy.linalg import *

distancia_city = array([
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]])

cityA = int(input("digite cidade A:"))
cityB = int(input("digite cidade B:"))

cityA = (cityA % 10) - 1
cityB = (cityB % 10) - 1
distancia = distancia_city[cityA,cityB]

while(cityB != -1):
	z = cityB
	print(z)
	cityB = int(input("digite cidade B:"))
	cityB = (cityB % 10) - 1
	print(cityB)
	#distancia = distancia + distancia_city[z,cityB]
#print(distancia)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 13:02:46) 
-- CODE:
from numpy import *
from numpy.linalg import *

distancia_city = array([
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]])

cityA = int(input("digite cidade A:"))
cityB = int(input("digite cidade B:"))

cityA = (cityA % 10) - 1
cityB = (cityB % 10) - 1
distancia = distancia_city[cityA,cityB]

while(cityB != -1):
	z = cityB
	print(z)
	cityB = int(input("digite cidade B:"))
	cityB = (cityB % 10) - 1
	print(cityB)
	#distancia = distancia + distancia_city[z,cityB]
#print(distancia)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 15:01:39) 
-- CODE:
from numpy import *
from numpy.linalg import *

distancia_city = array([
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]])

cityA = int(input("digite cidade A:"))
cityB = int(input("digite cidade B:"))

cityA = (cityA % 10) - 1
cityB = (cityB % 10) - 1
distancia = distancia_city[cityA,cityB]

while(cityB != -1):
	z = cityB
	print(z)
	cityB = int(input("digite cidade B:"))
	cityB = (cityB % 10) - 1
	print(cityB)
	distancia = distancia + distancia_city[z,cityB]
print(distancia)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 15:02:17) 
-- CODE:
from numpy import *
from numpy.linalg import *

distancia_city = array([
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]])

cityA = int(input("digite cidade A:"))
cityB = int(input("digite cidade B:"))

cityA = (cityA % 10) - 1
print(cityA)
cityB = (cityB % 10) - 1
print(cityB)
distancia = distancia_city[cityA,cityB]

while(cityB != -1):
	z = cityB
	print(z)
	cityB = int(input("digite cidade B:"))
	cityB = (cityB % 10) - 1
	print(cityB)
	distancia = distancia + distancia_city[z,cityB]
print(distancia)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 15:02:25) 
-- CODE:
from numpy import *
from numpy.linalg import *

distancia_city = array([
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]])

cityA = int(input("digite cidade A:"))
cityB = int(input("digite cidade B:"))

cityA = (cityA % 10) - 1
print(cityA)
cityB = (cityB % 10) - 1
print(cityB)
distancia = distancia_city[cityA,cityB]

while(cityB != -1):
	z = cityB
	print(z)
	cityB = int(input("digite cidade B:"))
	cityB = (cityB % 10) - 1
	print(cityB)
	distancia = distancia + distancia_city[z,cityB]
#print(distancia)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 15:02:57) 
-- CODE:
from numpy import *
from numpy.linalg import *

distancia_city = array([
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]])

cityA = int(input("digite cidade A:"))
cityB = int(input("digite cidade B:"))

cityA = (cityA % 10) - 1
print(cityA)
cityB = (cityB % 10) - 1
print(cityB)
distancia = distancia_city[cityA,cityB]

while(cityB != -1):
	z = cityB
	print(z)
	cityB = int(input("digite cidade B:"))
	cityB = (cityB % 10) - 1
	print(cityB)
	distancia = distancia + distancia_city[z,cityB]
#print(distancia)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 15:02:57) 
-- CODE:
from numpy import *
from numpy.linalg import *

distancia_city = array([
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]])

cityA = int(input("digite cidade A:"))
cityB = int(input("digite cidade B:"))

cityA = (cityA % 10) - 1
print(cityA)
cityB = (cityB % 10) - 1
print(cityB)
distancia = distancia_city[cityA,cityB]

while(cityB != -1):
	z = cityB
	print(z)
	cityB = int(input("digite cidade B:"))
	cityB = (cityB % 10) - 1
	print(cityB)
	distancia = distancia + distancia_city[z,cityB]
#print(distancia)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 15:02:57) 
-- CODE:
from numpy import *
from numpy.linalg import *

distancia_city = array([
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]])

cityA = int(input("digite cidade A:"))
cityB = int(input("digite cidade B:"))

cityA = (cityA % 10) - 1
print(cityA)
cityB = (cityB % 10) - 1
print(cityB)
distancia = distancia_city[cityA,cityB]

while(cityB != -1):
	z = cityB
	print(z)
	cityB = int(input("digite cidade B:"))
	cityB = (cityB % 10) - 1
	print(cityB)
	distancia = distancia + distancia_city[z,cityB]
#print(distancia)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 15:02:57) 
-- CODE:
from numpy import *
from numpy.linalg import *

distancia_city = array([
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]])

cityA = int(input("digite cidade A:"))
cityB = int(input("digite cidade B:"))

cityA = (cityA % 10) - 1
print(cityA)
cityB = (cityB % 10) - 1
print(cityB)
distancia = distancia_city[cityA,cityB]

while(cityB != -1):
	z = cityB
	print(z)
	cityB = int(input("digite cidade B:"))
	cityB = (cityB % 10) - 1
	print(cityB)
	distancia = distancia + distancia_city[z,cityB]
#print(distancia)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 15:02:57) 
-- CODE:
from numpy import *
from numpy.linalg import *

distancia_city = array([
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]])

cityA = int(input("digite cidade A:"))
cityB = int(input("digite cidade B:"))

cityA = (cityA % 10) - 1
print(cityA)
cityB = (cityB % 10) - 1
print(cityB)
distancia = distancia_city[cityA,cityB]

while(cityB != -1):
	z = cityB
	print(z)
	cityB = int(input("digite cidade B:"))
	cityB = (cityB % 10) - 1
	print(cityB)
	distancia = distancia + distancia_city[z,cityB]
#print(distancia)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:06:16) 
-- CODE:
from numpy import *
from numpy.linalg import *

distancia_city = array([
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]])

cityA = int(input("digite cidade A:"))
cityB = int(input("digite cidade B:"))

cityA = (cityA % 10) - 1
cityB = (cityB % 10) - 1

distancia = 0

while(cityB != -1):
	distancia = distancia + distancia_city[cityA,cityB]
	cityB = int(input("digite cidade B:"))
	cityB = (cityB % 10) - 1
print(distancia)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:06:30) 
-- CODE:
from numpy import *
from numpy.linalg import *

distancia_city = array([
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]])

cityA = int(input("digite cidade A:"))
cityB = int(input("digite cidade B:"))

cityA = (cityA % 10) - 1
cityB = (cityB % 10) - 1

distancia = 0

while(cityB != -1):
	distancia = distancia + distancia_city[cityA,cityB]
	cityB = int(input("digite cidade B:"))
	cityB = (cityB % 10) - 1
print(distancia)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:13:10) 
-- CODE:
from numpy import *
from numpy.linalg import *

distancia_city = array([
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]])

cityA = int(input("digite cidade A:"))
cityB = int(input("digite cidade B:"))

cityA = (cityA % 10) - 1
cityB = (cityB % 10) - 1

distancia = 0
z = cityA 
while(cityB != -1):
	distancia = distancia + distancia_city[z,cityB]
	z = cityB
	cityB = int(input("digite cidade B:"))
	cityB = (cityB % 10) - 1
print(distancia)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:47:35) 
-- CODE:
from numpy import *
from numpy.linalg import *

distancia_city = array([
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]])

distancia = 0 
cityA = int(input("z:"))
cityB = int(input("w:"))
while( cityB != -1):
	distancia = distancia_city[(cityA//100) - 1, (cityB//100) - 1] + distancia
	cityA = cityB 
	cityB = int(input("cityB:"))
print(distancia)	



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:48:02) 
-- CODE:
from numpy import *
from numpy.linalg import *

distancia_city = array([
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]])

distancia = 0 
cityA = int(input("cityA:"))
cityB = int(input("cityB:"))
while( cityB != -1):
	distancia = distancia_city[(cityA//100) - 1, (cityB//100) - 1] + distancia
	cityA = cityB 
	cityB = int(input("cityB:"))
print(distancia)	



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:48:19) 
-- CODE:
from numpy import *
from numpy.linalg import *

distancia_city = array([
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]])

distancia = 0 
cityA = int(input("cityA:"))
cityB = int(input("cityB:"))
while( cityB != -1):
	distancia = distancia_city[(cityA//100) - 1, (cityB//100) - 1] + distancia
	cityA = cityB 
	cityB = int(input("cityB:"))
print(distancia)	



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 16:48:24) 
-- CODE:
from numpy import *
from numpy.linalg import *

distancia_city = array([
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]])

distancia = 0 
cityA = int(input("cityA:"))
cityB = int(input("cityB:"))
while( cityB != -1):
	distancia = distancia_city[(cityA//100) - 1, (cityB//100) - 1] + distancia
	cityA = cityB 
	cityB = int(input("cityB:"))
print(distancia)	



-- EXECUTION TIME:
1.13914
-- TEST CASE 1:
---- input:
333
555
666
111
-1

---- correct output:
24
---- user output:
24
-- TEST CASE 2:
---- input:
222
777
555
333
666
111
-1

---- correct output:
50
---- user output:
50
-- TEST CASE 3:
---- input:
111
222
111
333
111
555
111
777
-1

---- correct output:
57
---- user output:
57
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
